// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsDropdownOrAction renders with multiple values 1`] = `
<DocumentFragment>
  <span
    class="__UserAction__"
  >
    <button
      class="ant-btn ant-btn-default ant-dropdown-trigger"
      type="button"
    >
      <span>
        Dude URL
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionsDropdownOrAction renders with single value 1`] = `
<DocumentFragment>
  <span
    class="__UserAction__"
  >
    <a
      href="dude.com/1"
      target="_blank"
    >
      Dude URL
    </a>
  </span>
</DocumentFragment>
`;
